Fix container alignment

--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ ul li::before {
 .hover-text {
     font-weight: 500;
     cursor: pointer;
+    font-size: 18px;
 }
 
 .hover-container:hover .hover-description {
@@ -203,6 +204,7 @@ ul li::before {
 
     max-width: 1800px;
     flex-wrap: wrap;
+    
 }
 
 .matcha-description {
@@ -220,12 +222,13 @@ ul li::before {
 }
 
 .row-2 {
-    padding-left: 202px;
+    padding-left: 206px;
     display: flex;
     margin: auto;
     align-items: center;
     gap: 60px;
     max-width: 1800px;
+
 }
 
 .product-name{
